# sbitmap

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: README.md  compare.rs
examples/: basic.rs
src/: lib.rs
