[package]
name = "sbitmap"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Fast and scalable bitmap implementation based on Linux kernel's sbitmap"
authors = ["Ming Lei <tom.leiming@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ublk-org/sbitmap"
license = "MIT OR Apache-2.0"
keywords = ["bitmap", "allocator", "lockfree", "concurrent", "scalable"]
categories = ["data-structures", "concurrency", "no-std"]
autobenches = false

[dependencies]
log = "0.4"
libc = { version = "0.2", optional = true }

[dev-dependencies]
env_logger = "0.11"

[lib]
name = "sbitmap"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[bin]]
name = "bench_compare"
path = "benches/compare.rs"
required-features = ["libc"]
